--- a/app/src/main/res/layout/activity_secret_edit.xml
+++ b/app/src/main/res/layout/activity_secret_edit.xml
@@ -27,16 +27,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <ImageView
+            <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/iv_picture"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:scaleType="fitXY"
                 tools:scaleType="fitCenter"
-                tools:src="@raw/img_1" />
+                tools:src="@raw/img_secret1" />
 
-            <EditText
+            <android.support.v7.widget.AppCompatEditText
                 android:id="@+id/et_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
