--- a/app/src/main/res/layout/item_secret_list.xml
+++ b/app/src/main/res/layout/item_secret_list.xml
@@ -28,7 +28,7 @@
             android:layout_marginTop="10dp"
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
-            tools:src="@raw/img_2" />
+            tools:src="@raw/img_secret2" />
 
         <TextView
             android:id="@+id/tv_title"
