--- a/app/src/main/res/layout/item_secret_picture_list.xml
+++ b/app/src/main/res/layout/item_secret_picture_list.xml
@@ -14,21 +14,21 @@
     app:cardElevation="6dp"
     app:contentPadding="10dp">
 
-    <LinearLayout
+    <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
-        <ImageView
+        <android.support.v7.widget.AppCompatImageView
             android:id="@+id/iv_picture"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
-            tools:src="@raw/img_1" />
+            tools:src="@raw/img_secret1" />
 
-        <TextView
+        <android.support.v7.widget.AppCompatTextView
             android:id="@+id/tv_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -38,6 +38,6 @@
             android:textStyle="bold"
             tools:text="福尔泰 + 乌蝇哥" />
 
-    </LinearLayout>
+    </android.support.v7.widget.LinearLayoutCompat>
 
 </android.support.v7.widget.CardView>
