--- a/app/src/main/res/layout/activity_one_emoticon_edit.xml
+++ b/app/src/main/res/layout/activity_one_emoticon_edit.xml
@@ -10,10 +10,9 @@
     <include layout="@layout/layout_appbar" />
 
     <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="50dp"
-        android:layout_marginStart="50dp"
+        android:layout_gravity="center_horizontal|top"
         android:layout_marginTop="20dp"
         app:cardBackgroundColor="@color/white"
         app:cardCornerRadius="3dp"
