--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,6 +53,19 @@
             android:textColor="@color/white"
             android:textSize="17sp" />
 
+        <Button
+            android:id="@+id/btn_gif"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/selector_bg_button_green"
+            android:gravity="center"
+            android:text="GIF"
+            android:textColor="@color/white"
+            android:textSize="17sp" />
+
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
